Added solver build and run infrastructure.  Also moved the DummySolver into the solver source hierarchy.